tests/NormalTests/paczka1/fuzzy1/62421851.err
Error in line 5: Rrhx S34 28,3
Error in line 25: Rrhx S410 95,0
Error in line 30: if1Fkg S34 8,52
Error in line 27: JwWCKV S790 22,2
Error in line 33: Rrhx S193 25,1
